--- a/admin.html
+++ b/admin.html
@@ -80,14 +80,14 @@
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6">
-                                <div class="single-service" onclick="goToPage('managerooms')">
+                                <div class="single-service" onclick="goToPage('addcaradmin')">
                                     <i class="fa fa-car"></i>
                                     <h4>Manage Cars</h4>
                                     
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6">
-                                <div class="single-service">
+                                <div class="single-service" onclick="goToPage('advertisement')">
                                     <i class="fa fa-car"></i>
                                     <h4>Manage Advertisements</h4>
                                     
