--- a/adminsign.html
+++ b/adminsign.html
@@ -16,18 +16,18 @@
    <body>
       <!------ Include the above in your HEAD tag ---------->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#">Ready For Ride</a>
+         <a class="navbar-brand" href="user.html">Ready For Ride</a>
       </nav>
       <div class="container login-container">
          <div class="row">
             <div class="col-md-12">
                <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
                   
-                  <li class="nav-item">
-                     <a class="nav-link" id="admin-tab" data-toggle="tab" href="#admin" role="tab" aria-controls="admin" aria-selected="true">Admin</a>
+                  <li class="nav-item" style="background-color: #191970;color: white !important;padding: 10px;" >
+                     <span>Admin</span>
                   </li>
                </ul>
-               <div class="tab-content" id="myTabContent">
+               <div >
                   
                   <div class="tab-pane fade show text-align form-new" id="admin" role="tabpanel" aria-labelledby="admin-tab">
                      <div class="row justify-content-center" >
