--- a/user.html
+++ b/user.html
@@ -61,21 +61,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="images/rentalcar1.jpg" width="100%" height="500px" alt="First slide">
+            <img class="d-block w-100" src="images/cr4.jpg" width="100%" height="500px" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
               <h5>Cheverlot</h5>
               <p>This is a Cheverlot car with having a seating of 5 people</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/rentalcar2.jpg" width="100%" height="500px" alt="Second slide">
+            <img class="d-block w-100" src="images/fr.jpg" width="100%" height="500px" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
               <h5>Fortuner</h5>
               <p>This is an Fortuner .People who are going for the ride with friends can prefer .It has a capacity of 8 members</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/rentalcar3.jpg" width="100%" height="500px"
+            <img class="d-block w-100" src="images/ir2.jpg" width="100%" height="500px"
               alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
               <h5>Innova</h5>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/rentalcar4.jpg" width="100%" height="500px" alt="Fourth slide">
+            <img class="d-block w-100" src="images/ar.jpg" width="100%" height="500px" alt="Fourth slide">
             <div class="carousel-caption d-none d-md-block">
               <h5>Jeep</h5>
 
